[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/boy/Idle__000.png" type="Texture" id=1]
[ext_resource path="res://themes/fonts/confortaa_18.tres" type="DynamicFont" id=2]
[ext_resource path="res://components/dialogos/dialogo_com_personagem/DialogoComUmPersonagem.gd" type="Script" id=3]
[ext_resource path="res://themes/fonts/confortaa_25.tres" type="DynamicFont" id=4]

[node name="DialogoComUmPersonagem" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.333
margin_bottom = -59.64
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.592157, 0.490196, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margem" type="MarginContainer" parent="Fundo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerDialogo" type="HBoxContainer" parent="Fundo/Margem"]
margin_right = 1900.0
margin_bottom = 280.0

[node name="ContainerPersonagem" type="CenterContainer" parent="Fundo/Margem/ContainerDialogo"]
margin_right = 270.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxPersonagem" type="VBoxContainer" parent="Fundo/Margem/ContainerDialogo/ContainerPersonagem"]
margin_left = 61.0
margin_top = 14.0
margin_right = 209.0
margin_bottom = 265.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImagemPersonagem" type="TextureRect" parent="Fundo/Margem/ContainerDialogo/ContainerPersonagem/VBoxPersonagem"]
margin_right = 148.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.51
texture = ExtResource( 1 )

[node name="NomePersonagem" type="Label" parent="Fundo/Margem/ContainerDialogo/ContainerPersonagem/VBoxPersonagem"]
margin_top = 230.0
margin_right = 148.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Personagem 1"
align = 1
valign = 1

[node name="TextoPersonagem" type="Label" parent="Fundo/Margem/ContainerDialogo"]
margin_left = 274.0
margin_right = 1900.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 4 )
text = "Esse Ã© um texto de exemplo. "
autowrap = true
